fix z-index for fab button on home page

--- a/src/pages/home/style.module.css
+++ b/src/pages/home/style.module.css
@@ -18,6 +18,7 @@
 }
 
 .browse-fab {
+  z-index: 1;
   position: fixed !important;
   bottom: 6vh;
   right: 6vw;
